--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -65,7 +65,7 @@ vos:
   vo.max-centre.eu: "urn:mace:egi.eu:group:vo.max-centre.eu:vm_operator:role=member#aai.egi.eu"
   vo.mightee.idia.za: "urn:mace:egi.eu:group:vo.mightee.idia.za:role=vm_operator#aai.egi.eu"
   vo.nbis.se: "urn:mace:egi.eu:group:vo.nbis.se:vm_operator:role=member#aai.egi.eu"
-  vo.neanias.se: "urn:mace:egi.eu:group:vo.neanias.se:vm_operator:role=member#aai.egi.eu"
+  vo.neanias.eu: "urn:mace:egi.eu:group:vo.neanias.eu:vm_operator:role=member#aai.egi.eu"
   vo.nextgeoss.eu: "urn:mace:egi.eu:group:vo.nextgeoss.eu:vm_operator:role=member#aai.egi.eu"
   vo.notebooks.egi.eu: "rn:mace:egi.eu:group:vo.notebooks.egi.eu:role=admin#aai.egi.eu"
   vo.obsea.es: "urn:mace:egi.eu:group:vo.obsea.es:vm_operator:role=member#aai.egi.eu"
