--- a/sites/SCAI.yaml
+++ b/sites/SCAI.yaml
@@ -2,9 +2,9 @@
 gocdb: SCAI
 endpoint: https://cloud.scai.fraunhofer.de:5000
 vos:
-- name: fedcloud.egi.eu
+- name: vo.access.egi.eu
   auth:
-    project_id: 162ecb7fe3ee450ca436935f87662858
+    project_id: 7583e1bb07544efdac165e7a121c663e
 - name: ops
   auth:
     project_id: 67bbf0ad6c4d4446b0c0c41197108f2c
