--- a/sites/SCAI.yaml
+++ b/sites/SCAI.yaml
@@ -1,6 +1,6 @@
 ---
 gocdb: SCAI
-endpoint: https://cloud.scai.fraunhofer.de:5000
+endpoint: https://cloud.scai.fraunhofer.de:5000/v3
 vos:
 - name: ops
   auth:
