--- a/sites/SCAI.yaml
+++ b/sites/SCAI.yaml
@@ -1,10 +1,11 @@
 ---
 gocdb: SCAI
-endpoint: https://fc.scai.fraunhofer.de:5000/v3
+endpoint: https://cloud.scai.fraunhofer.de:5000/v3
 vos:
-- name: fedcloud.egi.eu
-  auth:
-    project_id: 162ecb7fe3ee450ca436935f87662858
 - name: ops
   auth:
-    project_id: 67bbf0ad6c4d4446b0c0c41197108f2c
+    project_id: e9d70580d83f4da0a859093248791b7b
+- name: vo.access.egi.eu
+  auth:
+    project_id: 7583e1bb07544efdac165e7a121c663e
+
