--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -48,6 +48,7 @@ vos:
   vo.agiliacenter.com: "urn:mace:egi.eu:group:vo.agiliacenter.com:vm_operator:role=member#aai.egi.eu"
   vo.bd4nrg.eu: "urn:mace:egi.eu:group:vo.bd4nrg.eu:role=vm_operator#aai.egi.eu"
   vo.carouseldancing.org: "urn:mace:egi.eu:group:vo.carouseldancing.org:role=vm_operator#aai.egi.eu"
+  vo.cite.gr: "urn:mace:egi.eu:group:vo.cite.gr:role=member#aai.egi.eu"
   vo.clarin.eu: "urn:mace:egi.eu:group:vo.clarin.eu:vm_operator:role=member#aai.egi.eu"
   vo.deltares.nl: "urn:mace:egi.eu:group:vo.deltares.nl:vm_operator:role=member#aai.egi.eu"
   vo.elixir-europe.org: "urn:mace:egi.eu:group:vo.elixir-europe.org:vm_operator:role=member#aai.egi.eu"
@@ -70,6 +71,7 @@ vos:
   vo.notebooks.egi.eu: "rn:mace:egi.eu:group:vo.notebooks.egi.eu:role=admin#aai.egi.eu"
   vo.obsea.es: "urn:mace:egi.eu:group:vo.obsea.es:vm_operator:role=member#aai.egi.eu"
   vo.openbiomap.lifewatch.eu: "urn:mace:egi.eu:group:vo.openbiomap.lifewatch.eu:vm_operator:role=member#aai.egi.eu"
+  vo.openrdm.eu: "urn:mace:egi.eu:group:vo.openrdm.eu:role=vm_operator#aai.egi.eu"
   vo.operas-eu.org: "urn:mace:egi.eu:group:vo.operas-eu.org:vm_operator:role=member#aai.egi.eu"
   vo.pangeo.eu: "urn:mace:egi.eu:group:vo.pangeo.eu:role=vm_operator#aai.egi.eu"
   vo.panosc.eu: "urn:mace:egi.eu:group:vo.panosc.eu:role=vm_operator#aai.egi.eu"
