--- a/deploy/roles/catchall/defaults/main.yaml
+++ b/deploy/roles/catchall/defaults/main.yaml
@@ -4,7 +4,8 @@ ams_host: msg.argo.grnet.gr
 ams_token: secret
 
 # check-in endpoint
-checkin_token_endpoint: "https://aai.egi.eu/oidc/token"
+checkin:
+  token_endpoint: "https://aai.egi.eu/auth/realms/egi/protocol/openid-connect/token"
 
 # docker image for the cloud info provider
 cloud_info_image: egifedcloud/ops-cloud-info:latest
@@ -24,6 +25,8 @@ cloud_info_cron:
   hour: "*"
   weekday: "*"
   timeout: "600"
+
+image_sync_image: egifedcloud/ops-image-sync:latest
 
 image_sync_cron:
   minute: "5"
