--- a/deploy/roles/catchall/tasks/main.yml
+++ b/deploy/roles/catchall/tasks/main.yml
@@ -1,5 +1,6 @@
 ---
 - name: Ensure cron is available
+  tags: ["cloud-info", "sync"]
   ansible.builtin.apt:
     name: cron
     state: present
@@ -11,6 +12,7 @@
   tags: ['never', 'docker']
 
 - name: Load site configuration
+  tags: ["cloud-info", "sync"]
   ansible.builtin.include_vars:
     file: "{{ item }}"
     name: "{{ 'site_incl_vars_' ~ item | basename | splitext | first }}"
@@ -18,11 +20,13 @@
     - "{{ site_config_dir }}/*.yaml"
 
 - name: Set site configuration variable
+  tags: ["cloud-info", "sync"]
   ansible.builtin.set_fact:
     sites: "{{ sites | default([]) + [lookup('vars', item)] }}"
   loop: "{{ query('varnames', '^site_incl_vars_(.*)$') }}"
 
 - name: EGI configuration directories
+  tags: ["cloud-info", "sync"]
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
@@ -34,10 +38,22 @@
     - /etc/egi/vos
 
 - name: Site specific config
-  ansible.builtin.include_tasks: cloud-info.yml
+  tags: ["cloud-info"]
+  ansible.builtin.include_tasks:
+    file: cloud-info.yml
+    apply:
+      tags: "cloud-info"
   vars:
     site: "{{ item }}"
     filename: "{{ item.gocdb | replace('.', '-') }}-{{ item.endpoint | hash('md5') }}"
   with_items:
     - "{{ sites }}"
   when: sites is iterable
+
+
+- name: Image sync config
+  tags: ["sync"]
+  ansible.builtin.include_tasks:
+    file: sync.yml
+    apply:
+      tags: "sync"
