--- a/deploy/roles/catchall/tasks/sync.yml
+++ b/deploy/roles/catchall/tasks/sync.yml
@@ -15,6 +15,8 @@
     src: sync.conf.j2
     dest: /etc/egi/image_sync/sync.conf
     mode: "600"
+    owner: "{{ egi_user }}"
+    group: "{{ egi_group }}"
 
 - name: Image sync cron
   ansible.builtin.cron:
@@ -24,8 +26,9 @@
     hour: "{{ image_sync_cron.hour }}"
     user: root
     job: >
-      flock -n -w {{ iamge_sync.timeout }} /var/lock/sync
+      flock -n -w {{ image_sync.timeout }} /var/lock/sync
       docker run --rm -v /etc/egi:/etc/egi:ro
-      --env-file /etc/egi/image_sync/image_sync.env
-      {{ sync_image }} >> /var/log/sync.log 2>&1
+      -v {{ site_config_dir }}:/sites:ro
+      {{ image_sync_image }} sites-sync
+      --config-dir /etc/egi/image_sync >> /var/log/sync.log 2>&1
     cron_file: "egi-image-sync"
